# CoreAsset-InventoryManagement-headless-api

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/analytics/: __init__.py  views.py
backend/assets/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/assets/migrations/: 0001_initial.py  0002_alter_asset_options.py  0002_seed_default_categories.py  0003_usertablepreference.py  0004_alter_categoryfield_options_and_more.py
backend/audit/: admin.py  middleware.py  models.py  serializers.py  views.py
backend/audit/migrations/: 0001_initial.py  0002_alter_auditlog_entity_id.py
backend/core/: settings.py  urls.py
backend/employees/: admin.py  models.py  serializers.py  urls.py  views.py
backend/employees/migrations/: 0001_initial.py
backend/rbac/: admin.py  models.py  serializers.py  urls.py  views.py
backend/rbac/migrations/: 0001_initial.py
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_options_user_assigned_locations_and_more.py  0002_user_avatar_user_avatar_visibility.py
frontend/: Dockerfile  package-lock.json
